# sta

./: .gitignore  README.md  pyproject.toml
examples/example1/tests/: test_main.py
src/: config.py  context_providers.py  main.py
src/agents/: code_rewrite.py
